--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -19,7 +19,7 @@ NOTE: you can use
 
 cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local -DVERBOSE=true ..
 
-For compiling in 'Verbose' mode, where a .txt log files will be output to the same directory.
+For compiling in 'Verbose' mode, where diagnostic .txt files will be output to the same directory.
 
 On a standard linux workstation, Moments++ takes < 2 minutes to compile and install once all dependencies are met. Note that static linkage is not supported, meaning that Moments++ should only be executed on the same machine where it was built.
 
